# robotic_tutorial

./: README.md
gopigo/gopigo_controller/: CMakeLists.txt  package.xml
gopigo/gopigo_controller/launch/: controller.launch
gopigo/gopigo_controller/scripts/: move_gopigo.py
gopigo/gopigo_description/: CMakeLists.txt  package.xml
gopigo/gopigo_description/launch/: debug.launch  load.launch  rviz.launch
gopigo/gopigo_description/urdf/: gopigo.urdf.xacro
gopigo/gopigo_description/urdf/base/0_0_0/: gopigo_base.urdf.xacro
gopigo/gopigo_description/urdf/include/: gopigo_plugin.gazebo.xacro
gopigo/gopigo_description/urdf/wheel/: wheel_parameters.urdf.xacro
gopigo/gopigo_gazebo/: CMakeLists.txt
gopigo/gopigo_gazebo/config/: publishers.yaml  subscribers.yaml
gopigo/gopigo_gazebo/include/gopigo_gazebo/: GopigoGazeboPlugin.hpp
gopigo/gopigo_gazebo/launch/: gazebo.launch
gopigo/gopigo_gazebo/src/: GopigoGazeboPlugin.cpp
gopigo/gopigo_msgs/msg/: GopigoState.msg
gopigo/gopigo_sim/: CMakeLists.txt  README.md  package.xml
gopigo/gopigo_tf/: CMakeLists.txt  setup.py
gopigo/gopigo_tf/launch/: tf_publisher.launch
gopigo_aruco/: CMakeLists.txt  README.md  package.xml
gopigo_aruco/config/any_multi_marker/: parameters_real.yaml  parameters_sim.yaml
gopigo_aruco/launch/: any_multi.launch  football_aruco.launch  single.launch
gopigo_aruco/urdf/multi_markers/: multi_marker_0.urdf.xacro  multi_marker_1.urdf.xacro  quad_marker_0.urdf.xacro  quad_marker_1.urdf.xacro  quad_marker_2.urdf.xacro  quad_marker_3.urdf.xacro  quad_marker_4.urdf.xacro  quad_marker_5.urdf.xacro
gopigo_aruco/urdf/single_markers/: marker_0.urdf.xacro  marker_1.urdf.xacro  marker_10.urdf.xacro  marker_11.urdf.xacro  marker_12.urdf.xacro  marker_13.urdf.xacro  marker_16.urdf.xacro  marker_19.urdf.xacro  marker_21.urdf.xacro  marker_22.urdf.xacro  marker_4.urdf.xacro  marker_7.urdf.xacro
gopigo_controller/: package.xml  setup.py
gopigo_controller/scripts/: ball_catcher.py  ball_tracker.py  ball_tracker_solution.py  controller_node.py  estimator.py  gopigo_state_publisher.py  main.py  move_gopigo.py
gopigo_description/launch/: gopigo.launch
gopigo_description/launch/modules/: ball.launch  camera.launch  field.launch
gopigo_description/launch/rviz/: empty.rviz  rviz.launch
gopigo_description/urdf/: ball.urdf.xacro  football_field.urdf.xacro  gopigo.urdf.xacro  overhead_camera.urdf.xacro
gopigo_description/urdf/base/0_0_0/: gopigo_base.urdf.xacro  gopigo_base_parameters.urdf.xacro
gopigo_description/urdf/include/: camera.gazebo.xacro  gopigo_utils.urdf.xacro
gopigo_description/urdf/single_markers/: marker_14.urdf.xacro  marker_15.urdf.xacro  marker_17.urdf.xacro  marker_18.urdf.xacro  marker_2.urdf.xacro  marker_20.urdf.xacro  marker_23.urdf.xacro  marker_3.urdf.xacro  marker_5.urdf.xacro  marker_6.urdf.xacro  marker_8.urdf.xacro  marker_9.urdf.xacro
gopigo_description/urdf/wheel/: wheel.urdf.xacro
gopigo_football_sim/: CMakeLists.txt  package.xml
gopigo_football_sim/config/: parameters_real.yaml
gopigo_football_sim/config/rviz/: gopigo.rviz
gopigo_football_sim/config/tf/: tf_real.yaml  tf_real_1.yaml  tf_sim.yaml
gopigo_football_sim/launch/: real.launch  sim.launch
gopigo_football_sim/scripts/: aruco_test.py
gopigo_gazebo/: README.md  package.xml
gopigo_gazebo/include/gopigo_gazebo/: GopigoGazeboPlugin.hpp
gopigo_gazebo/launch/: gazebo.launch
gopigo_gazebo/src/: GopigoGazeboPlugin.cpp
gopigo_msgs/: CMakeLists.txt  package.xml
gopigo_sim/: CMakeLists.txt  README.md  package.xml
gopigo_sim/config/rviz/: gopigo.rviz
gopigo_sim/config/tf/: tf_real.yaml  tf_sim.yaml
gopigo_sim/launch/: sim.launch  sim_gdb.launch
gopigo_sim/scripts/: camera_test.py
gopigo_tf/: package.xml  setup.py
gopigo_tf/launch/: tf_publisher.launch
gopigo_tf/scripts/: RosTfPublisher.py  main.py  tf_publisher.py
robotic_tutorial/: CMakeLists.txt  package.xml  setup.py
robotic_tutorial/config/: parameters.yaml
robotic_tutorial/launch/: jointStatePublisher.launch  multiplePublisher.launch
robotic_tutorial/scripts/: fibonacci_beggar.py  fibonacci_calculator.py  jointStatePublisher.py  receiver.py  receiverOOP.py  sender.py  senderOOP.py
robotic_tutorial/srv/: Fibonacci.srv
turtle_competition/: CMakeLists.txt  package.xml  setup.py
turtle_competition/launch/: turtle_competition.launch
turtle_competition/scripts/: competition_node.py  competition_publisher.py
turtle_exercise/: CMakeLists.txt  package.xml  setup.py
turtle_exercise/config/: parameters.yaml
turtle_exercise/launch/: turtle_exercise.launch
turtle_exercise/msg/: Exercise_result.msg  Exercise_start.msg
turtle_exercise/scripts/: exercise_node.py  exercise_publisher.py
