<?xml version="1.0"?>
<package format="2">
  <name>gopigo_aruco</name>
  <version>0.0.0</version>
  <description>This package </description>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>aruco</depend>
  <depend>aruco_msgs</depend>
  <depend>aruco_ros</depend>

</package>
