<?xml version="1.0"?>
<package format="2">
  <name>gopigo_gazebo</name>
  <version>0.1.7</version>
  <description>Arac Gazebo plugins</description>
  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kulman_gazebo</depend>
  <depend>kulman_msgs</depend>


  <depend>boost</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>gopigo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>


  <depend>tf</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
