<?xml version="1.0"?>

<package format="2">

  <name>gopigo_sim</name>
  <version>0.0.1</version>
  <description>None </description>
  <license>Proprietary</license>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gopigo_description</depend>
  <depend>gopigo_gazebo</depend>
  <depend>gopigo_aruco</depend>
  <depend>gopigo_tf</depend>
  <depend>ros_node_utils</depend>
  <depend>kinect2_bridge</depend>


</package>
