<?xml version="1.0"?>
<package format="2">
  <name>robotic_tutorial</name>
  <version>0.0.0</version>
  <description>This package to build necessary stuff for robotic_tutorial</description>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
