<?xml version="1.0"?>
<package format="2">
  <name>turtle_exercise</name>
  <version>0.0.0</version>
  <description>This package to build necessary stuff for robotic_tutorial</description>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>
  <license>Proprietary</license>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
