<?xml version="1.0"?>

<package format="2">

  <name>gopigo_sim</name>
  <version>0.0.1</version>
  <description>None </description>
  <license>Proprietary</license>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gopigo_description</depend>
  <depend>gopigo_gazebo</depend>

</package>
